src/test/deca/context/invalid/created/object/equals_int_float.deca
// Description :
//    test equals entre un int et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
int a;
float b;
int c = a.equal(b);
}
